# keto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  data.json
assets/items/powerups/: health.aseprite
assets/levels/1/: map.txt
assets/levels/2/: map.txt
assets/levels/4/: map.txt
assets/map/: map.txt  test.txt
include/: ammo.hpp  bullet.hpp  camera.hpp  enemy.hpp  game.hpp  gun.hpp  levels.hpp  map.hpp  menu.hpp  player.hpp  sprite.hpp  utils.hpp  weapon.hpp
src/: ammo.cpp  bullet.cpp  camera.cpp  enemy.cpp  game.cpp  gun.cpp  levels.cpp  main.cpp  map.cpp  menu.cpp  player.cpp  sprite.cpp  utils.cpp  weapon.cpp
